--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
             </section>
             <!--Cloudstack Links-->
             <section>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
-                <a target="_bLank" href=""></a><br>
+                <a target="_bLank" href="https://adventuremediaco.github.io/Join-Our-Team-MULE-is-hiring/">https://adventuremediaco.github.io/Join-Our-Team-MULE-is-hiring/</a><br>
+                <a target="_bLank" href="https://muleexpedition.s3.us-east-005.backblazeb2.com/Join+Our+Team:+MULE+is+hiring/index.html">https://muleexpedition.s3.us-east-005.backblazeb2.com/Join+Our+Team:+MULE+is+hiring/index.html</a><br>
+                <a target="_bLank" href="https://join-our-team-mule-is-hir-git-f5dc05-adventuremediacos-projects.vercel.app/">https://join-our-team-mule-is-hir-git-f5dc05-adventuremediacos-projects.vercel.app/</a><br>
+                <a target="_bLank" href="https://velvety-halva-04ab56.netlify.app/">https://velvety-halva-04ab56.netlify.app/</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
